fix: fixed the linkedin issue, created an endpoint for it
